frontend: fix navbar overflow issue, modify movie info card opening timing

--- a/frontend/src/components/Sections/MovieListSection/transition.css
+++ b/frontend/src/components/Sections/MovieListSection/transition.css
@@ -16,7 +16,7 @@
 .slide-up-enter-active {
   transform: translateY(0);
   /* opacity: 1; */
-  transition: transform 0.3s ease-out;
+  transition: transform 0.25s ease-out;
 }
 
 .slide-up-exit {
@@ -27,6 +27,6 @@
 .slide-up-exit-active {
   transform: translateY(82svh);
   /* opacity: 0; */
-  transition: transform 0.3s ease-in;
+  transition: transform 0.25s ease-in;
 }
 
