--- a/frontend/src/components/Sections/NavBar/NavBar.module.scss
+++ b/frontend/src/components/Sections/NavBar/NavBar.module.scss
@@ -5,6 +5,7 @@
   position: absolute;
   bottom: 6rem;
   right: 0;
+  overflow: hidden;
 
   display: flex;
   flex-direction: column;
